--- a/templates/todo_index.html
+++ b/templates/todo_index.html
@@ -2,60 +2,27 @@
 
 <head>
     <title>Todo</title>
+    <script type="text/javascript" src="{{url_for('static', filename = 'js/image.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename = 'js/timer.js')}}"></script>
     <link rel="stylesheet" href={{ url_for( "static",filename="css/pure-min.css" ) }}>
-    <style type="text/css">
-        .todo-table {
-            margin: 0 auto;
-        }
-        
-        .center {
-            text-align: center;
-        }
-        
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        
-        .box {
-            margin: 10px auto;
-            padding: 30px;
-            width: 200px;
-            border: 1px dashed #ccc;
-            border-radius: 8px;
-            text-align: center;
-            background: #eee;
-        }
-        
-        button {
-            margin-top: 20px;
-        }
-        
-        button {
-            height: 30px;
-            width: 70px;
-            border: 1px solid #bbb;
-            border-radius: 4px;
-        }
-        
-        button:last-of-type {
-            margin-left: 10px;
-        }
-        
-        span {
-            font-size: 60px;
-        }
-    </style>
+    <link rel="stylesheet" href={{ url_for( "static",filename="css/todo.css" ) }}>
 </head>
 
 <body>
     <div class="center">
+        <img src="{{url_for('static', filename = 'image/pexels-breakingpic-3299.jpg')}}" alt="todo" onload="javascript:ResizeImage(this,500,500)" />
         <h1>{{ username }}'s Todo</h1>
         <form method="get" action={ { url_for( ".logout") }}>
             <button type="submit">Exit</button>
         </form>
+        <table class="title">
+            <tr>
+                <th>Title</th>
+                <th>How much time you want to spend on this task?</th>
+        </table>
         <form action={{ url_for( "todo.add") }} method="post">
             <input type="text" placeholder="Add Todo" name="title">
+            <input type="text" placeholder=" time you want to spend on this task?" name="time">
             <input class="pure-button pure-button-primary" type="submit" value="Add">
         </form>
     </div>
@@ -65,7 +32,8 @@
             <tr>
                 <th>#</th>
                 <th>Title</th>
-                <th>Time</th>
+                <th>Suppose Time</th>
+                <th>Actual Time</th>
                 <th>Action</th>
             </tr>
         </thead>
@@ -78,66 +46,25 @@
                 {% else %}
                 <td><a href={{ url_for( 'todo.completed',todo_id=t .id) }}>{{ t.title }}</a></td>
                 {% endif %}
-                <td>{{ t.ut }}</td>
+                <td></td>
+                <td><input type="text" placeholder=time name="time"></td>
                 <td><a href={{ url_for( 'todo.delete', todo_id=t.id) }}>delete</a></td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
     <div class="box">
-        <div class="timer">
-            <span id="min">30</span>
-            <span>:</span>
-            <span id="sec">00</span>
-        </div>
-        <button id="btn1">Start</button>
-        <button id="btn2">Reset</button>
+        <span id="hour">00</span>
+        <span>:</span>
+        <span id="min">00</span>
+        <span>:</span>
+        <span id="sec">00</span>
+        <br>
+        <button id="start">start</button>
+        <button id="pause">pause</button>
+        <button id="reset">reset</button>
     </div>
 </body>
-<script>
-    var btn1 = document.getElementById('btn1')
-    var btn2 = document.getElementById('btn2')
-    var min = document.getElementById('min')
-    var sec = document.getElementById('sec')
-    var flag = false
-    var timer = null
-    var minTime = 29
-    var secTime = 59
-    btn1.onclick = function() {
-        if (flag) {
-            flag = false
-            clearInterval(timer)
-            btn1.innerText = 'Start'
-        } else {
-            flag = true
-            btn1.innerText = 'Stop'
-            timer = setInterval(() => {
-                if (Number(minTime) === 0 && Number(secTime) === 0) {
-                    clearInterval(timer)
-                    sec.innerText = 00
-                    min.innerText = 30
-                    btn1.innerText = 'Start'
-                    flag = false
-                }
-                sec.innerText = secTime < 10 ? '0' + secTime : secTime
-                min.innerText = minTime < 10 ? '0' + minTime : minTime
-                if (Number(secTime) <= 0 && Number(minTime) >= 0) {
-                    secTime = 60
-                    minTime--
-                }
-                secTime--
-            }, 1000);
-        }
-    }
-    btn2.onclick = function() {
-        clearInterval(timer)
-        flag = false
-        btn1.innerText = 'Start'
-        minTime = 29
-        secTime = 59
-        sec.innerText = '00'
-        min.innerText = '30'
-    }
-</script>
+
 
 </html>
