--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="form-actions">
-            <input type="submit" class="span-primary" value="注册">
+            <input type="submit" class="span-primary" value="sign up">
         </div>
     </form>
     <form class="form-horizontal" method="post" action="{{ url_for('.login') }}">
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="form-actions">
-            <input type="submit" class="span-primary" value="login">
+            <input type="submit" class="span-primary" value="log in">
         </div>
     </form>
 </body>
