--- a/static/css/todo.css
+++ b/static/css/todo.css
@@ -1,56 +1,63 @@
 .todo-table {
-	margin: 0 auto;
+    margin: 0 auto;
 }
+
 table.title {
-	margin: 0 auto;
-	font-family: verdana,arial,sans-serif;
-	font-size:11px;
-	color:#333333;
-	border-width: 10px;
-	border-color: #666666;
-	border-collapse: collapse;
+    margin: 0 auto;
+    font-family: verdana, arial, sans-serif;
+    font-size: 11px;
+    color: #333333;
+    border-width: 10px;
+    border-color: #666666;
+    border-collapse: collapse;
 }
+
 table.title th {
-	border-width: 1px;
-	padding: 8px;
-	border-style: solid;
-	border-color: #666666;
-	background-color: #dedede;
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #666666;
+    background-color: #dedede;
 }
+
 .center {
-	text-align: center;
+    text-align: center;
 }
 
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
+}
+
+.p {
+    margin: 0 auto;
 }
 
 .box {
-	margin: 10px auto;
-	padding: 30px;
-	width: 300px;
-	border: 1px dashed #ccc;
-	border-radius: 8px;
-	text-align: center;
-	background: #eee;
+    margin: 10px auto;
+    padding: 30px;
+    width: 300px;
+    border: 1px dashed #ccc;
+    border-radius: 8px;
+    text-align: center;
+    background: #eee;
 }
 
 button {
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 button {
-	height: 30px;
-	width: 70px;
-	border: 1px solid #bbb;
-	border-radius: 4px;
+    height: 30px;
+    width: 70px;
+    border: 1px solid #bbb;
+    border-radius: 4px;
 }
 
 button:last-of-type {
-	margin-left: 10px;
+    margin-left: 10px;
 }
 
 span {
-	font-size: 60px;
+    font-size: 60px;
 }
